Horizontal Scroll Fix

--- a/Code/src/page_styles/About.css
+++ b/Code/src/page_styles/About.css
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-color: #151515; 
+  overflow-x: hidden;
 }
 
 
