--- a/Code/src/page_styles/Leaderboard.css
+++ b/Code/src/page_styles/Leaderboard.css
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-color: #0E0216;
+  overflow-x: hidden;
 }
 
 
